<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py03_action</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="muzi2001@foxmail.com">muzing</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>base_interfaces_demo</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
